# interviews-playground

./: .gitignore
2025/snyk/: README.md
2025/snyk/1-pr-review/: README.md  notes.md
2026/docs/superpowers/specs/: 2026-05-29-in-memory-db-design.md
2026/in-memory-db/: .envrc  README.md  Taskfile.yml  config.toml  pyproject.toml
2026/in-memory-db/app/: config.py  main.py
2026/in-memory-db/app/adapters/rest/: errors.py  router.py  schemas.py
2026/in-memory-db/app/core/: exceptions.py  models.py  store.py
2026/in-memory-db/app/ports/: storage.py
2026/in-memory-db/docs/: scaling.md
2026/in-memory-db/docs/superpowers/plans/: 2026-05-29-in-memory-db.md
2026/in-memory-db/tests/: conftest.py  test_api.py  test_config.py  test_store.py
2026/incident-io/giuseppe-santoro-python/: README.md  Taskfile.yml  input.json  loom-notes.md  main.py  models.py  output.json  pyproject.toml  requirements.txt  test_main.py
2026/python-sample-rest-app/: Taskfile.yml  pyproject.toml
2026/python-sample-rest-app/docs/superpowers/plans/: 2026-05-21-interview-harness.md
2026/python-sample-rest-app/docs/superpowers/specs/: 2026-05-21-interview-harness-design.md
2026/python-sample-rest-app/tests/: test_hello.py
one-signal/: pyproject.toml
one-signal/app/: main.py
one-signal/app/routers/: health.py  hello.py
