[project]
name = "in-memory-db"
version = "0.1.0"
description = "Redis-like in-memory key-value store"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
